# flow-matching

./: .gitignore  .gitlint  .pre-commit-config.yaml  README.md  pyproject.toml
flow/: pyproject.toml
flow/src/flow/: __init__.py  distrib.py  field.py  flow.py  ode.py  path.py  sim.py
notebook/: main.ipynb  train.ipynb
notebooks/: main.ipynb
workspaces/flow_anime/: README.md  pyproject.toml
workspaces/flow_anime/src/flow_anime/: __main__.py  app.py  args.py  dataset.py  eval.py  sample.py  server.py  train.py  workflow.py
workspaces/flow_flowers/: .gitignore  README.md  config.yaml  pyproject.toml
workspaces/flow_flowers/.store/mlflow/0/: meta.yaml
workspaces/flow_flowers/notebook/: viz_aug.ipynb  viz_eda.ipynb  viz_ode.ipynb  viz_vae.ipynb
workspaces/flow_flowers/src/flow_flowers/: __init__.py  __main__.py  _app.py  _config.py  _data.py  _param.py  _train.py  _utils.py  app.py  config.py  data.py  model.py  ode.py  param.py  prob.py  train.py  utils.py
workspaces/flow_intro/: pyproject.toml
workspaces/flow_intro/notebook/: main.ipynb  train.ipynb
workspaces/flow_intro/src/flow_intro/: __init__.py  diffusion.py  display.py  distrib.py  field.py  flow.py  net.py  ode.py  path.py  sim.py  train.py  utils.py
workspaces/flow_mnist/: .gitignore  config.yaml  pyproject.toml
workspaces/flow_mnist/notebook/: flow_viz.ipynb  main.ipynb  train.ipynb  train_cfg.ipynb  train_uncond.ipynb  vae_viz.ipynb  viz_flow.ipynb  viz_vae.ipynb
workspaces/flow_mnist/src/flow_mnist/: config.py  data.py  flow.py  model.py  ode.py  script.py  train.py  utils.py
