[project]
name = "flow-matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.sources]
flow_intro = { workspace = true }
flow_mnist = { workspace = true }
flow_flowers = { workspace = true }
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[tool.uv.workspace]
members = ["workspaces/*"]

[[tool.uv.index]]
explicit = true
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu128"

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
