[project]
name = "flow-matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.sources]
flow_intro = { workspace = true }
flow_mnist = { workspace = true }
flow_flowers = { workspace = true }
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[tool.uv.workspace]
members = ["workspaces/*"]

[[tool.uv.index]]
explicit = true
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu128"

[tool.ruff]
indent-width = 4
line-length = 224
include = ["pyproject.toml", "*.py", "*.ipynb"]

[tool.ruff.lint]
extend-select = ["ICN", "I"]
extend-fixable = ["ICN", "I"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
order-by-type = true
lines-between-types = 1
lines-after-imports = 2
force-wrap-aliases = true
known-local-folder = ["flow_*"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"torch.nn.functional" = "F"
"numpy.typing" = "npt"
albumentations = "A"

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ipywidgets>=8.1.7", "pre-commit>=4.2.0"]
