[project]
name = "flow_anime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentationsx>=2.0.9",
    "beartype>=0.21.0",
    "cyclopts>=3.19.0",
    "diffusers>=0.33.1",
    "einops>=0.8.1",
    "einx[torch]>=0.3.0",
    "matplotlib>=3.10.3",
    "torch>=2.7.1",
    "torchao>=0.11.0",
    "torchdiffeq>=0.2.5",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
