[project]
name = "flow-flowers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=3.19.0",
    "einops>=0.8.1",
    "einx[torch]>=0.3.0",
    "matplotlib>=3.10.3",
    "mlflow>=3.1",
    "omegaconf>=2.3.0",
    "python-box>=7.3.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["ruff>=0.12.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
