[project]
name = "flow-mnist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diffusers[torch]>=0.33.1",
    "einops>=0.8.1",
    "einx[torch]>=0.3.0",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "mlflow>=3.0.0rc0",
    "omegaconf>=2.3.0",
    "torch>=2.7.1",
    "torchcodec>=0.4.0",
    "torchdiffeq>=0.2.5",
    "torchmetrics>=1.7.2",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[project.scripts]
"start_server" = "flow_mnist.script:start_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
